kde-config-snap (0.1) UNRELEASED; urgency=medium

  * Initial release.

 -- Alex Lowe <lengau@gmail.com>  Sat, 26 Oct 2024 11:47:34 -0400