@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2024 Soumyadeep Ghosh <soumyadghosh@ubuntu.com>
+# SPDX-License-Identifier: GPL-2.0-or-later
+
 name: snap-kcm
 base: core22
 version: '0.1'
