@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2024 Soumyadeep Ghosh <soumyadghosh@ubuntu.com>
+# SPDX-License-Identifier: GPL-2.0-or-later
+
 kde-config-snap (0.1) UNRELEASED; urgency=medium
 
   * Initial release.
